[package]
name = "knuckles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytes = "1.5.0"
chrono = { version = "0.4.34", features = ["serde"] }
dirs = "5.0.1"
futures = "0.3.30"
md5 = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking", "stream"] }
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
url = "2.5.0"

[dev-dependencies]
textwrap = "0.16.1"
